feat: 채팅내역 정렬 수정